# cpp-basic-exercises

./: README.md
AL97/: CMakeLists.txt
AL97/case/: MainCase.cpp  MainCase2.cpp  MainCase3.cpp  MainCase4.cpp  MainCase5.cpp
AL97/condicionales/: MainCondicionales.cpp  MainCondicionales2.cpp  MainCondicionales3.cpp  MainCondicionales4.cpp  MainCondicionales5.cpp  condicionales5.txt
AL97/repetitivas/: MainRepetitivas.cpp  MainRepetitivas2.cpp  MainRepetitivas3.cpp  MainRepetitivas4.cpp  MainRepetitivas5.cpp
AL97/secuenciales/: MainSecuenciales.cpp  MainSecuenciales2.cpp  MainSecuenciales3.cpp  MainSecuenciales4.cpp  MainSecuenciales5.cpp
DataStructures/: CMakeLists.txt
DataStructures/colas/: sample1.cpp  sample2.cpp
DataStructures/exercises/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp
DataStructures/ordering/: insertion.cpp  selection.cpp
DataStructures/pilas/: sample1.cpp  sample2.cpp
DataStructures/samples/: sample1.cpp  sample2.cpp  sample3.cpp  sample4.cpp  sample5.cpp  sample6.cpp
DataStructures/search/: binaria.cpp  secuencial.cpp
